[package]
name = "app-run"
description = "Run a command with a modified environment"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
nix = "0.26.2"
paste = "1.0.12"
